# pymeteoclimatic

./: pyproject.toml
.github/workflows/: build_test.yml  publish.yml
meteoclimatic/: __init__.py  client.py
tests/: test_client.py
